# VoxelEngine

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
res/shaders/: fog.wgsl  light.wgsl  shader.wgsl
src/: camera.rs  lib.rs  light.wgsl  main.rs  model.rs  resources.rs  shader.wgsl  texture.rs
src/engine/: camera.rs  mod.rs  model.rs  render.rs  resources.rs  shader_preprocess.rs  texture.rs
src/engine/shaders/: light.wgsl  shader.wgsl
src/voxel/: chunk.rs  math.rs  mod.rs  voxel.rs
src/world/: app.rs  chunk.rs  mod.rs  physics.rs  player.rs  scheduler.rs
src/world/physics/: components.rs  context.rs  mod.rs  systems.rs
