[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
image = "0.24"
anyhow = "1.0"
cgmath = "0.18"
tobj = { version = "4.0", features = [ "async" ] }
enum-map = "2.7"
lazy_static = "1.4"
ndarray = "0.15"
noise = "0.8"
threadpool = "1.8"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
