[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.19"
pollster = "0.3"
bytemuck = { version = "1.14", features = [ "derive" ] }
image = "0.24"
anyhow = "1.0"
nalgebra = "0.32"
tobj = { version = "4.0", features = [ "async" ] }
enum-map = "2.7"
lazy_static = "1.4"
ndarray = "0.15"
noise = "0.8"
threadpool = "1.8"
ordered-float = "4.2"
regex = "1.10"
rapier3d = "0.18"
hecs = "0.10"
hecs-schedule = "0.7"
hecs-hierarchy = "0.12"
itertools = "0.12"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[profile.release]
debug = true
codegen-units = 1

[profile.dev.package."*"]
opt-level = 3
